// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:dropdown-button 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-DropDown is-opened show"
    >
      <button
        class="amis-Button amis-Button--primary amis-Button--size-default"
      >
        <span
          class="amis-DropDown-caret"
        >
          <icon-mock
            classname="icon icon-right-arrow-bold"
            icon="right-arrow-bold"
          />
        </span>
      </button>
      <ul
        class="amis-DropDown-menu-root amis-DropDown-menu"
        style="width: 0px;"
      >
        <li
          class="amis-DropDown-button"
        >
          <a
            class=""
          >
            <span>
              按钮
            </span>
          </a>
        </li>
        <li
          class="amis-DropDown-button"
        >
          <a
            class=""
          >
            <span>
              按钮
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Renderer:dropdown-button 2`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-DropDown show"
    >
      <button
        class="amis-Button amis-Button--primary amis-Button--size-default"
      >
        <span
          class="amis-DropDown-caret"
        >
          <icon-mock
            classname="icon icon-right-arrow-bold"
            icon="right-arrow-bold"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Renderer:dropdown-button with block & size 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-DropDown amis-DropDown--block"
    >
      <button
        class="amis-Button amis-Button--default amis-Button--block amis-Button--size-default"
      >
        下拉菜单
        <span
          class="amis-DropDown-caret"
        >
          <icon-mock
            classname="icon icon-right-arrow-bold"
            icon="right-arrow-bold"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Renderer:dropdown-button with block & size 2`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-DropDown"
    >
      <button
        class="amis-Button amis-Button--default amis-Button--size-lg"
      >
        下拉菜单
        <span
          class="amis-DropDown-caret"
        >
          <icon-mock
            classname="icon icon-right-arrow-bold"
            icon="right-arrow-bold"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Renderer:dropdown-button with buttons group 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-DropDown is-opened"
    >
      <button
        class="amis-Button amis-Button--default amis-Button--size-default"
      >
        下拉菜单
        <span
          class="amis-DropDown-caret"
        >
          <icon-mock
            classname="icon icon-right-arrow-bold"
            icon="right-arrow-bold"
          />
        </span>
      </button>
      <ul
        class="amis-DropDown-menu-root amis-DropDown-menu"
        style="width: 0px;"
      >
        <div
          class="amis-DropDown-menu"
        >
          <li
            class="amis-DropDown-groupTitle"
          >
            <i
              class="fa fa-user m-r-xs fa fa-user"
            />
            <span>
              RD
            </span>
          </li>
          <li
            class="amis-DropDown-button"
          >
            <a
              class=""
            >
              <span>
                前端FE
              </span>
            </a>
          </li>
          <li
            class="amis-DropDown-button"
          >
            <a
              class=""
            >
              <span>
                后端RD
              </span>
            </a>
          </li>
        </div>
        <div
          class="amis-DropDown-menu"
        >
          <li
            class="amis-DropDown-groupTitle"
          >
            <i
              class="fa fa-user m-r-xs fa fa-user"
            />
            <span>
              QA
            </span>
          </li>
          <li
            class="amis-DropDown-button"
          >
            <a
              class=""
            >
              <span>
                测试QA
              </span>
            </a>
          </li>
          <li
            class="amis-DropDown-button is-disabled"
          >
            <a
              class=""
              disabled=""
            >
              <span>
                交付测试DQA
              </span>
            </a>
          </li>
          <li
            class="amis-DropDown-divider"
          />
        </div>
        <div
          class="amis-DropDown-menu"
        >
          <li
            class="amis-DropDown-groupTitle"
          >
            <i
              class="fa fa-user m-r-xs fa fa-user"
            />
            <span>
              Manager
            </span>
          </li>
          <li
            class="amis-DropDown-button"
          >
            <a
              class=""
            >
              <span>
                项目经理PM
              </span>
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Renderer:dropdown-button with closeOnClick & closeOnOutside 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="amis-DropDown is-opened"
            >
              <button
                class="amis-Button amis-Button--default amis-Button--size-default"
              >
                下拉菜单
                <span
                  class="amis-DropDown-caret"
                >
                  <icon-mock
                    classname="icon icon-right-arrow-bold"
                    icon="right-arrow-bold"
                  />
                </span>
              </button>
              <ul
                class="amis-DropDown-menu-root amis-DropDown-menu"
                style="width: 0px;"
              >
                <li
                  class="amis-DropDown-button"
                >
                  <a
                    class=""
                  >
                    <span>
                      按钮1
                    </span>
                  </a>
                </li>
                <li
                  class="amis-DropDown-button"
                >
                  <a
                    class=""
                  >
                    <span>
                      按钮2
                    </span>
                  </a>
                </li>
              </ul>
            </div>
            <button
              class="amis-Button amis-Button--default amis-Button--size-default"
              type="button"
            >
              <span>
                outside
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:dropdown-button with hideCaret 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-DropDown"
    >
      <button
        class="amis-Button amis-Button--link amis-Button--size-default"
      >
        <i
          class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
        />
        下拉菜单
      </button>
    </div>
  </div>
</div>
`;

exports[`Renderer:dropdown-button with icon & rightIcon 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-DropDown"
    >
      <button
        class="amis-Button amis-Button--default amis-Button--size-default"
      >
        <i
          class="fa fa-home icon m-r-xs fa fa-home"
        />
        下拉菜单
        <i
          class="fa fa-ellipsis-v icon m-l-xs fa fa-ellipsis-v"
        />
        <span
          class="amis-DropDown-caret"
        >
          <icon-mock
            classname="icon icon-right-arrow-bold"
            icon="right-arrow-bold"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;
